primitives/npos-elections/compact/tests/ui/fail/missing_accuracy.stderr
warning: trait objects without an explicit `dyn` are deprecated
   --> $DIR/lib.rs:305:57
    |
305 |         self.extension_by_type_id(TypeId::of::<T>()).and_then(Any::downcast_mut)
    |                                                               ^^^ help: use `dyn`: `<dyn Any>`
    |
    = note: `#[warn(bare_trait_objects)]` on by default

warning: 1 warning emitted

error: Expected binding: `Accuracy = ...`
 --> $DIR/missing_accuracy.rs:6:2
  |
6 |     Perbill,
  |     ^^^^^^^
